fix img ver-align style

--- a/zul/src/archive/web/js/zul/wgt/less/button.less
+++ b/zul/src/archive/web/js/zul/wgt/less/button.less
@@ -33,6 +33,6 @@
 		cursor: default;
 	}
 	img {
-		vertical-align: text-top;
+		vertical-align: middle;
 	}
 }
